@@ -2,6 +2,8 @@
 
 AUTOMAKE_OPTIONS = foreign
 
+AM_CPPFLAGS = -DPKGLIBEXECDIR=\"$(pkglibexecdir)\"
+
 PLUGIN_FLAGS = -module -avoid-version --export-dynamic
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
@@ -11,7 +13,7 @@ pkglib_LTLIBRARIES = checkpoint_blcr.la
 checkpoint_blcr_la_SOURCES = checkpoint_blcr.c
 checkpoint_blcr_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
-dist_bin_SCRIPTS = cr_checkpoint.sh cr_restart.sh
+dist_pkglibexec_SCRIPTS = cr_checkpoint.sh cr_restart.sh
 
 force:
 
