@@ -27,6 +27,7 @@ documents those changes that are of interest to users and admins.
     compile lines.
  -- Patch from Matthieu Hautreux to improve error message in slurmd/req.c
  -- Added support for split groups from (Matthiu Hautreux CEA)
+ -- Patch from Mark Grondona to move blcr scripts into pkglibexecdir
 
 * Changes in SLURM 2.1.0-pre7
 =============================
